Fix navigation item spacing

--- a/theme/styles/parts/navigation.styl
+++ b/theme/styles/parts/navigation.styl
@@ -3,6 +3,9 @@
 		margin 0
 		text-decoration none
 
+	&-item
+		display inline
+
 	&-link
 		display block
 		color $text-color
